--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "basic-ftp": "^5.0.5",
     "encoding-japanese": "^2.1.0",
-    "ftp": "^0.3.10",
     "geoip-lite": "^1.4.10",
     "js-sha256": "^0.11.0",
     "md5": "^2.3.0",
