--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.3",
     "ssh2-sftp-client": "^10.0.3"
   },
   "devDependencies": {
