--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "js-sha256": "^0.11.0",
     "md5": "^2.3.0",
     "mysql2": "^3.9.3",
-    "next": "14.1.4",
+    "next": "^14.2.2",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.3",
