--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "basic-ftp": "^5.0.5",
     "encoding-japanese": "^2.1.0",
     "geoip-lite": "^1.4.10",
+    "jimp": "^0.22.12",
     "js-sha256": "^0.11.0",
     "md5": "^2.3.0",
     "mysql2": "^3.9.3",
