--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "js-sha256": "^0.11.0",
     "md5": "^2.3.0",
     "mysql2": "^3.10.3",
-    "next": "^15.0.3",
-    "react": "^19.0.0-rc.1",
-    "react-dom": "^19.0.0-rc.1",
+    "next": "^15.1.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "sharp": "^0.33.3",
     "ssh2-sftp-client": "^10.0.3"
   },
